# jin

./: .gitignore  CHANGELOG.md  Cargo.toml  PRD.md  README.md  TEST_RESULTS.md  bug_fix_tasks.json  cliff.toml  dist-workspace.toml  release-plz.toml  tasks.json
.github/workflows/: ci.yml
plan/: SYNTHESIS_SUMMARY.md
plan/001_8630d8d70301/: bug_hunt_tasks.json
plan/P1M1T1/: PRP.md
plan/P1M1T2/: PRP.md
plan/P1M1T3/: PRP.md
plan/P1M1T4/: PRP.md
plan/P1M1T5/: PRP.md
plan/P1M2/: PRP.md
plan/P1M2T1/: PRP.md
plan/P1M2T1S1/: PRP.md
plan/P1M2T1S2/: PRP.md
plan/P1M2T2/: PRP.md
plan/P1M2T2S1/: PRP.md
plan/P1M2T3/: PRP.md
plan/P1M2T4/: PRP.md
plan/P1M3T1/: PRP.md
plan/P1M3T3/: PRP.md
plan/P1M3T4/: PRP.md
plan/P1M3T5/: PRP.md
plan/P2M1/: PRP.md
plan/P2M1T1/: PRP.md
plan/P2M1T2/: PRP.md
plan/P2M2T1/: PRP.md
plan/P2M3/: PRP.md
plan/P2M3T1/: PRP.md
plan/P2M3T2/: PRP.md
plan/P2M4T1/: PRP.md
plan/P3M1/: PRP.md
plan/P3M1T1/: PRP.md
plan/P3M2T1/: PRP.md
plan/P4M1/: PRP.md
plan/P4M1T1/: PRP.md
plan/P4M2/: PRP.md
plan/P4M2T1/: PRP.md
plan/P4M2T2/: PRP.md
plan/P4M2T3/: PRP.md
plan/P4M2T4/: PRP.md
plan/P4M3/: PRP.md
plan/P4M3T1/: PRP.md
plan/P4M3T2/: PRP.md
plan/P4M4/: PRP.md
plan/P4M4T1/: PRP.md
plan/P4M4T2/: PRP.md
plan/P4M5/: PRP.md
plan/P4M5T1/: PRP.md
plan/P4M5T2/: PRP.md
plan/P4M5T3/: PRP.md
plan/P4M5T4/: PRP.md
plan/P4M5T5/: PRP.md
plan/P4M5T6/: PRP.md
plan/P4M5T7/: PRP.md
plan/P4M5T8/: PRP.md
plan/P4M6/: PRP.md
plan/P4M6T1/: PRP.md
plan/P6M4/: PRP.md  RESEARCH_PACKAGE_MANIFEST.md
plan/P7M3T1/: PRP.md
plan/P7M4T1/: PRP.md
plan/architecture/: codebase_analysis.md  external_deps.md
plan/docs/: 01_command_structure.md  02_configuration_system.md  (+44 more)
src/: lib.rs  main.rs  test_utils.rs
tests/: atomic_operations.rs  cli_add_local.rs  cli_apply_conflict.rs  cli_basic.rs  cli_diff.rs  cli_import.rs  cli_list.rs  cli_log.rs  cli_mv.rs  cli_reset.rs  cli_resolve.rs  conflict_workflow.rs  core_workflow.rs  destructive_validation.rs  error_scenarios.rs  export_committed.rs  integration_test.rs  layer_merge_test.rs  merge_test.rs  mode_scope_workflow.rs  pull_merge.rs  repair_check.rs  resolve_workflow.rs  sync_workflow.rs  transaction_test.rs  workspace_validation.rs
(+393 files in other folders)
