[package]
name = "jin-glm"
version = "0.1.0"
edition = "2021"
description = "Jin - Multi-layer Git overlay system for configuration management"
license = "MIT"
repository = "https://github.com/jin-versioning/jin"
authors = ["Jin Contributors"]

[[bin]]
name = "jin"
path = "src/main.rs"

[lib]
name = "jin_glm"
path = "src/lib.rs"

[dependencies]
git2 = { version = "0.20", features = ["vendored-libgit2", "ssh", "https"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.9"
toml = "0.9"
configparser = "0.4"
similar = "2.6"
indexmap = { version = "2.7", features = ["serde"] }
uuid = { version = "1.19", features = ["v4"] }
anyhow = "1.0"
thiserror = "2.0"
tempfile = "3.12"
walkdir = "2.5"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
bitflags = { version = "2.6", features = ["serde"] }
console = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.40"

[profile.release]
lto = true
codegen-units = 1
strip = true
