[package]
name = "jin"
version = "0.1.0"
edition = "2021"
authors = ["Jin Team"]
description = "Phantom Git layer system for developer configuration"
license = "MIT"
repository = "https://github.com/jin/jin"
readme = "README.md"
keywords = ["git", "configuration", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "jin"
path = "src/lib.rs"

[[bin]]
name = "jin"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Git operations
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
rust-ini = "0.21"

# Data structures
indexmap = { version = "2.0", features = ["serde"] }

# Text merging
diffy = "0.4"

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[profile.release]
lto = true
opt-level = 3
